# gml_bi_ce

./: .dockerignore  .gitignore  README.md  build_local_image.sh  config.py  config.yaml  dash_tool.py  dockerfile-bi  eda_tool.py  login.py  requirements.txt  setup.cfg  start_app.sh  start_app_prod.sh  start_bi_app.sh  start_eda_app.sh  start_local_container.sh  stop_local_container.sh  test_gml_bi.py  wat.py
data/input/: README.md
data/output/: README.md
docs/: README.md
logs/: README.md
src/analysis/: aggregates.py  charts.py  filters.py  metrics.py  queries.py  tables.py
src/auth/: authenticate.py  exceptions.py  utils.py  validator.py
src/load/: put_bt_empresas_in_dw.py
src/utils/: dw_operations.py  hasher.py  logger_app.py
