[metadata]
name = gml_bi
version = 1.0.0
author = Laercio Serra
author_email = laercio.serra@gmail.com
description = Get More Leads [CNPJ]
url = https://github.com/lserra/gml_bi_ce
keywords = dw, olap, analysis

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    duckdb
    pandas
    python-dotenv
    setuptools
    google-cloud-storage
    altair
    streamlit
    streamlit-authenticator
    watchdog
    bcrypt
    PyJWT
    PyYAML
    typer
    dtale

[options.packages.find]
where = src

[options.extras_require]
